Solved WCB-50, and added sidebar.phtml that i forgot to push for category listing page, added left and right spacing to promotion banner section

--- a/app/design/frontend/wc/b2b_eshop/web/css/style.less
+++ b/app/design/frontend/wc/b2b_eshop/web/css/style.less
@@ -651,10 +651,12 @@ dd {
     	a{
     		color: @general_product_name_color;
     		vertical-align:middle;
-    		margin-left:20px;
     		&:hover{
     			color: @general_link_hover_color;
     		}
+    	}
+    	.itemMenu.level1 a{
+    		margin-left:20px;
     	}
     	.header.links{
     		margin-bottom: 10px;
